parser.automaton
State 0:
fichier' -> . fichier [ # ]
-- On STRUCT shift to state 1
-- On FN shift to state 21
-- On list(decl) shift to state 138
-- On fichier shift to state 140
-- On decl_struct shift to state 141
-- On decl_fun shift to state 142
-- On decl shift to state 143
-- On EOF reduce production list(decl) -> 

State 1:
decl_struct -> STRUCT . IDENT LEFTG loption(separated_nonempty_list(COMMA,decl_sous_struct)) RIGHTG [ STRUCT FN EOF ]
-- On IDENT shift to state 2

State 2:
decl_struct -> STRUCT IDENT . LEFTG loption(separated_nonempty_list(COMMA,decl_sous_struct)) RIGHTG [ STRUCT FN EOF ]
-- On LEFTG shift to state 3

State 3:
decl_struct -> STRUCT IDENT LEFTG . loption(separated_nonempty_list(COMMA,decl_sous_struct)) RIGHTG [ STRUCT FN EOF ]
-- On IDENT shift to state 4
-- On separated_nonempty_list(COMMA,decl_sous_struct) shift to state 15
-- On loption(separated_nonempty_list(COMMA,decl_sous_struct)) shift to state 16
-- On decl_sous_struct shift to state 18
-- On RIGHTG reduce production loption(separated_nonempty_list(COMMA,decl_sous_struct)) -> 

State 4:
decl_sous_struct -> IDENT . TO typ [ RIGHTG COMMA ]
-- On TO shift to state 5

State 5:
decl_sous_struct -> IDENT TO . typ [ RIGHTG COMMA ]
-- On IDENT shift to state 6
-- On ET shift to state 8
-- On typ shift to state 14

State 6:
typ -> IDENT . [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
typ -> IDENT . INF typ SUP [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On INF shift to state 7
-- On SUP reduce production typ -> IDENT 
-- On RIGHTPAR reduce production typ -> IDENT 
-- On RIGHTG reduce production typ -> IDENT 
-- On MUT reduce production typ -> IDENT 
-- On LEFTG reduce production typ -> IDENT 
-- On IDENT reduce production typ -> IDENT 
-- On COMMA reduce production typ -> IDENT 

State 7:
typ -> IDENT INF . typ SUP [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On IDENT shift to state 6
-- On ET shift to state 8
-- On typ shift to state 12

State 8:
typ -> ET . typ [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
typ -> ET . MUT typ [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On MUT shift to state 9
-- On IDENT shift to state 6
-- On ET shift to state 8
-- On typ shift to state 11

State 9:
typ -> ET MUT . typ [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On IDENT shift to state 6
-- On ET shift to state 8
-- On typ shift to state 10

State 10:
typ -> ET MUT typ . [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On SUP reduce production typ -> ET MUT typ 
-- On RIGHTPAR reduce production typ -> ET MUT typ 
-- On RIGHTG reduce production typ -> ET MUT typ 
-- On MUT reduce production typ -> ET MUT typ 
-- On LEFTG reduce production typ -> ET MUT typ 
-- On IDENT reduce production typ -> ET MUT typ 
-- On COMMA reduce production typ -> ET MUT typ 

State 11:
typ -> ET typ . [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On SUP reduce production typ -> ET typ 
-- On RIGHTPAR reduce production typ -> ET typ 
-- On RIGHTG reduce production typ -> ET typ 
-- On MUT reduce production typ -> ET typ 
-- On LEFTG reduce production typ -> ET typ 
-- On IDENT reduce production typ -> ET typ 
-- On COMMA reduce production typ -> ET typ 

State 12:
typ -> IDENT INF typ . SUP [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On SUP shift to state 13

State 13:
typ -> IDENT INF typ SUP . [ SUP RIGHTPAR RIGHTG MUT LEFTG IDENT COMMA ]
-- On SUP reduce production typ -> IDENT INF typ SUP 
-- On RIGHTPAR reduce production typ -> IDENT INF typ SUP 
-- On RIGHTG reduce production typ -> IDENT INF typ SUP 
-- On MUT reduce production typ -> IDENT INF typ SUP 
-- On LEFTG reduce production typ -> IDENT INF typ SUP 
-- On IDENT reduce production typ -> IDENT INF typ SUP 
-- On COMMA reduce production typ -> IDENT INF typ SUP 

State 14:
decl_sous_struct -> IDENT TO typ . [ RIGHTG COMMA ]
-- On RIGHTG reduce production decl_sous_struct -> IDENT TO typ 
-- On COMMA reduce production decl_sous_struct -> IDENT TO typ 

State 15:
loption(separated_nonempty_list(COMMA,decl_sous_struct)) -> separated_nonempty_list(COMMA,decl_sous_struct) . [ RIGHTG ]
-- On RIGHTG reduce production loption(separated_nonempty_list(COMMA,decl_sous_struct)) -> separated_nonempty_list(COMMA,decl_sous_struct) 

State 16:
decl_struct -> STRUCT IDENT LEFTG loption(separated_nonempty_list(COMMA,decl_sous_struct)) . RIGHTG [ STRUCT FN EOF ]
-- On RIGHTG shift to state 17

State 17:
decl_struct -> STRUCT IDENT LEFTG loption(separated_nonempty_list(COMMA,decl_sous_struct)) RIGHTG . [ STRUCT FN EOF ]
-- On STRUCT reduce production decl_struct -> STRUCT IDENT LEFTG loption(separated_nonempty_list(COMMA,decl_sous_struct)) RIGHTG 
-- On FN reduce production decl_struct -> STRUCT IDENT LEFTG loption(separated_nonempty_list(COMMA,decl_sous_struct)) RIGHTG 
-- On EOF reduce production decl_struct -> STRUCT IDENT LEFTG loption(separated_nonempty_list(COMMA,decl_sous_struct)) RIGHTG 

State 18:
separated_nonempty_list(COMMA,decl_sous_struct) -> decl_sous_struct . [ RIGHTG ]
separated_nonempty_list(COMMA,decl_sous_struct) -> decl_sous_struct . COMMA separated_nonempty_list(COMMA,decl_sous_struct) [ RIGHTG ]
-- On COMMA shift to state 19
-- On RIGHTG reduce production separated_nonempty_list(COMMA,decl_sous_struct) -> decl_sous_struct 

State 19:
separated_nonempty_list(COMMA,decl_sous_struct) -> decl_sous_struct COMMA . separated_nonempty_list(COMMA,decl_sous_struct) [ RIGHTG ]
-- On IDENT shift to state 4
-- On separated_nonempty_list(COMMA,decl_sous_struct) shift to state 20
-- On decl_sous_struct shift to state 18

State 20:
separated_nonempty_list(COMMA,decl_sous_struct) -> decl_sous_struct COMMA separated_nonempty_list(COMMA,decl_sous_struct) . [ RIGHTG ]
-- On RIGHTG reduce production separated_nonempty_list(COMMA,decl_sous_struct) -> decl_sous_struct COMMA separated_nonempty_list(COMMA,decl_sous_struct) 

State 21:
decl_fun -> FN . IDENT LEFTPAR list(argument) RIGHTPAR bloc [ STRUCT FN EOF ]
decl_fun -> FN . IDENT LEFTPAR list(argument) RIGHTPAR MOINS SUP typ bloc [ STRUCT FN EOF ]
-- On IDENT shift to state 22

State 22:
decl_fun -> FN IDENT . LEFTPAR list(argument) RIGHTPAR bloc [ STRUCT FN EOF ]
decl_fun -> FN IDENT . LEFTPAR list(argument) RIGHTPAR MOINS SUP typ bloc [ STRUCT FN EOF ]
-- On LEFTPAR shift to state 23

State 23:
decl_fun -> FN IDENT LEFTPAR . list(argument) RIGHTPAR bloc [ STRUCT FN EOF ]
decl_fun -> FN IDENT LEFTPAR . list(argument) RIGHTPAR MOINS SUP typ bloc [ STRUCT FN EOF ]
-- On MUT shift to state 24
-- On list(argument) shift to state 25
-- On boption(MUT) shift to state 132
-- On argument shift to state 136
-- On RIGHTPAR reduce production list(argument) -> 
-- On IDENT reduce production boption(MUT) -> 

State 24:
boption(MUT) -> MUT . [ IDENT ]
-- On IDENT reduce production boption(MUT) -> MUT 

State 25:
decl_fun -> FN IDENT LEFTPAR list(argument) . RIGHTPAR bloc [ STRUCT FN EOF ]
decl_fun -> FN IDENT LEFTPAR list(argument) . RIGHTPAR MOINS SUP typ bloc [ STRUCT FN EOF ]
-- On RIGHTPAR shift to state 26

State 26:
decl_fun -> FN IDENT LEFTPAR list(argument) RIGHTPAR . bloc [ STRUCT FN EOF ]
decl_fun -> FN IDENT LEFTPAR list(argument) RIGHTPAR . MOINS SUP typ bloc [ STRUCT FN EOF ]
-- On MOINS shift to state 27
-- On LEFTG shift to state 30
-- On bloc shift to state 131

State 27:
decl_fun -> FN IDENT LEFTPAR list(argument) RIGHTPAR MOINS . SUP typ bloc [ STRUCT FN EOF ]
-- On SUP shift to state 28

State 28:
decl_fun -> FN IDENT LEFTPAR list(argument) RIGHTPAR MOINS SUP . typ bloc [ STRUCT FN EOF ]
-- On IDENT shift to state 6
-- On ET shift to state 8
-- On typ shift to state 29

State 29:
decl_fun -> FN IDENT LEFTPAR list(argument) RIGHTPAR MOINS SUP typ . bloc [ STRUCT FN EOF ]
-- On LEFTG shift to state 30
-- On bloc shift to state 130

State 30:
bloc -> LEFTG . list(instr) expr RIGHTG [ WHILE VEC Tint TRUE SUPEGAL SUP STRUCT RIGHTPAR RIGHTG RIGHTC RETURN PRINT POINT PLUS OR NOTEGAL MOINS MOD LET LEFTPAR LEFTG LEFTC INFEGAL INF IF IDENT FOIS FN FALSE EXCL ETMUT ET EOF ENDLINE ELSE EGAL DIVISE DBLEGAL COMMA AND ]
bloc -> LEFTG . list(instr) RIGHTG [ WHILE VEC Tint TRUE SUPEGAL SUP STRUCT RIGHTPAR RIGHTG RIGHTC RETURN PRINT POINT PLUS OR NOTEGAL MOINS MOD LET LEFTPAR LEFTG LEFTC INFEGAL INF IF IDENT FOIS FN FALSE EXCL ETMUT ET EOF ENDLINE ELSE EGAL DIVISE DBLEGAL COMMA AND ]
-- On WHILE shift to state 31
-- On VEC shift to state 32
-- On Tint shift to state 35
-- On TRUE shift to state 36
-- On RETURN shift to state 92
-- On PRINT shift to state 37
-- On MOINS shift to state 42
-- On LET shift to state 96
-- On LEFTPAR shift to state 43
-- On LEFTG shift to state 30
-- On IF shift to state 114
-- On IDENT shift to state 44
-- On FOIS shift to state 46
-- On FALSE shift to state 47
-- On EXCL shift to state 48
-- On ETMUT shift to state 49
-- On ET shift to state 50
-- On ENDLINE shift to state 120
-- On unaire shift to state 51
-- On list(instr) shift to state 121
-- On instr shift to state 125
-- On ifb shift to state 127
-- On expr shift to state 128
-- On bloc shift to state 77
-- On VEC reduce production list(instr) -> 
-- On Tint reduce production list(instr) -> 
-- On TRUE reduce production list(instr) -> 
-- On RIGHTG reduce production list(instr) -> 
-- On PRINT reduce production list(instr) -> 
-- On MOINS reduce production list(instr) -> 
-- On LEFTPAR reduce production list(instr) -> 
-- On LEFTG reduce production list(instr) -> 
-- On IDENT reduce production list(instr) -> 
-- On FOIS reduce production list(instr) -> 
-- On FALSE reduce production list(instr) -> 
-- On EXCL reduce production list(instr) -> 
-- On ETMUT reduce production list(instr) -> 
-- On ET reduce production list(instr) -> 
** Conflict on VEC Tint TRUE PRINT MOINS LEFTPAR LEFTG IDENT FOIS FALSE EXCL ETMUT ET

State 31:
instr -> WHILE . expr bloc [ WHILE VEC Tint TRUE RIGHTG RETURN PRINT MOINS LET LEFTPAR LEFTG IF IDENT FOIS FALSE EXCL ETMUT ET ENDLINE ]
-- On VEC shift to state 32
-- On Tint shift to state 35
-- On TRUE shift to state 36
-- On PRINT shift to state 37
-- On MOINS shift to state 42
-- On LEFTPAR shift to state 43
-- On LEFTG shift to state 30
-- On IDENT shift to state 44
-- On FOIS shift to state 46
-- On FALSE shift to state 47
-- On EXCL shift to state 48
-- On ETMUT shift to state 49
-- On ET shift to state 50
-- On unaire shift to state 51
-- On expr shift to state 90
-- On bloc shift to state 77

State 32:
expr -> VEC . EXCL LEFTC loption(separated_nonempty_list(COMMA,expr)) RIGHTC [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On EXCL shift to state 33

State 33:
expr -> VEC EXCL . LEFTC loption(separated_nonempty_list(COMMA,expr)) RIGHTC [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On LEFTC shift to state 34

State 34:
expr -> VEC EXCL LEFTC . loption(separated_nonempty_list(COMMA,expr)) RIGHTC [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On VEC shift to state 32
-- On Tint shift to state 35
-- On TRUE shift to state 36
-- On PRINT shift to state 37
-- On MOINS shift to state 42
-- On LEFTPAR shift to state 43
-- On LEFTG shift to state 30
-- On IDENT shift to state 44
-- On FOIS shift to state 46
-- On FALSE shift to state 47
-- On EXCL shift to state 48
-- On ETMUT shift to state 49
-- On ET shift to state 50
-- On unaire shift to state 51
-- On separated_nonempty_list(COMMA,expr) shift to state 79
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 88
-- On expr shift to state 82
-- On bloc shift to state 77
-- On RIGHTC reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 35:
expr -> Tint . [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On SUPEGAL reduce production expr -> Tint 
-- On SUP reduce production expr -> Tint 
-- On RIGHTPAR reduce production expr -> Tint 
-- On RIGHTG reduce production expr -> Tint 
-- On RIGHTC reduce production expr -> Tint 
-- On POINT reduce production expr -> Tint 
-- On PLUS reduce production expr -> Tint 
-- On OR reduce production expr -> Tint 
-- On NOTEGAL reduce production expr -> Tint 
-- On MOINS reduce production expr -> Tint 
-- On MOD reduce production expr -> Tint 
-- On LEFTG reduce production expr -> Tint 
-- On LEFTC reduce production expr -> Tint 
-- On INFEGAL reduce production expr -> Tint 
-- On INF reduce production expr -> Tint 
-- On FOIS reduce production expr -> Tint 
-- On ENDLINE reduce production expr -> Tint 
-- On EGAL reduce production expr -> Tint 
-- On DIVISE reduce production expr -> Tint 
-- On DBLEGAL reduce production expr -> Tint 
-- On COMMA reduce production expr -> Tint 
-- On AND reduce production expr -> Tint 

State 36:
expr -> TRUE . [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On SUPEGAL reduce production expr -> TRUE 
-- On SUP reduce production expr -> TRUE 
-- On RIGHTPAR reduce production expr -> TRUE 
-- On RIGHTG reduce production expr -> TRUE 
-- On RIGHTC reduce production expr -> TRUE 
-- On POINT reduce production expr -> TRUE 
-- On PLUS reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NOTEGAL reduce production expr -> TRUE 
-- On MOINS reduce production expr -> TRUE 
-- On MOD reduce production expr -> TRUE 
-- On LEFTG reduce production expr -> TRUE 
-- On LEFTC reduce production expr -> TRUE 
-- On INFEGAL reduce production expr -> TRUE 
-- On INF reduce production expr -> TRUE 
-- On FOIS reduce production expr -> TRUE 
-- On ENDLINE reduce production expr -> TRUE 
-- On EGAL reduce production expr -> TRUE 
-- On DIVISE reduce production expr -> TRUE 
-- On DBLEGAL reduce production expr -> TRUE 
-- On COMMA reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 

State 37:
expr -> PRINT . EXCL LEFTPAR Tstring RIGHTPAR [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On EXCL shift to state 38

State 38:
expr -> PRINT EXCL . LEFTPAR Tstring RIGHTPAR [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On LEFTPAR shift to state 39

State 39:
expr -> PRINT EXCL LEFTPAR . Tstring RIGHTPAR [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On Tstring shift to state 40

State 40:
expr -> PRINT EXCL LEFTPAR Tstring . RIGHTPAR [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On RIGHTPAR shift to state 41

State 41:
expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR . [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On SUPEGAL reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On SUP reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On RIGHTPAR reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On RIGHTG reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On RIGHTC reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On POINT reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On PLUS reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On OR reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On NOTEGAL reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On MOINS reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On MOD reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On LEFTG reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On LEFTC reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On INFEGAL reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On INF reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On FOIS reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On ENDLINE reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On EGAL reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On DIVISE reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On DBLEGAL reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On COMMA reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 
-- On AND reduce production expr -> PRINT EXCL LEFTPAR Tstring RIGHTPAR 

State 42:
expr -> MOINS . expr [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
unaire -> MOINS . [ VEC Tint TRUE PRINT MOINS LEFTPAR LEFTG IDENT FOIS FALSE EXCL ETMUT ET ]
-- On VEC shift to state 32
-- On Tint shift to state 35
-- On TRUE shift to state 36
-- On PRINT shift to state 37
-- On LEFTPAR shift to state 43
-- On LEFTG shift to state 30
-- On IDENT shift to state 44
-- On FOIS shift to state 46
-- On FALSE shift to state 47
-- On EXCL shift to state 48
-- On ETMUT shift to state 49
-- On ET shift to state 50
-- On unaire shift to state 51
-- On expr shift to state 87
-- On bloc shift to state 77
-- On VEC reduce production unaire -> MOINS 
-- On Tint reduce production unaire -> MOINS 
-- On TRUE reduce production unaire -> MOINS 
-- On PRINT reduce production unaire -> MOINS 
-- On MOINS reduce production unaire -> MOINS 
-- On LEFTPAR reduce production unaire -> MOINS 
-- On LEFTG reduce production unaire -> MOINS 
-- On IDENT reduce production unaire -> MOINS 
-- On FALSE reduce production unaire -> MOINS 
** Conflict on VEC Tint TRUE PRINT LEFTPAR LEFTG IDENT FALSE

State 43:
expr -> LEFTPAR . expr RIGHTPAR [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On VEC shift to state 32
-- On Tint shift to state 35
-- On TRUE shift to state 36
-- On PRINT shift to state 37
-- On MOINS shift to state 42
-- On LEFTPAR shift to state 43
-- On LEFTG shift to state 30
-- On IDENT shift to state 44
-- On FOIS shift to state 46
-- On FALSE shift to state 47
-- On EXCL shift to state 48
-- On ETMUT shift to state 49
-- On ET shift to state 50
-- On unaire shift to state 51
-- On expr shift to state 85
-- On bloc shift to state 77

State 44:
expr -> IDENT . [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
expr -> IDENT . LEFTPAR loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On LEFTPAR shift to state 45
-- On SUPEGAL reduce production expr -> IDENT 
-- On SUP reduce production expr -> IDENT 
-- On RIGHTPAR reduce production expr -> IDENT 
-- On RIGHTG reduce production expr -> IDENT 
-- On RIGHTC reduce production expr -> IDENT 
-- On POINT reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On OR reduce production expr -> IDENT 
-- On NOTEGAL reduce production expr -> IDENT 
-- On MOINS reduce production expr -> IDENT 
-- On MOD reduce production expr -> IDENT 
-- On LEFTG reduce production expr -> IDENT 
-- On LEFTC reduce production expr -> IDENT 
-- On INFEGAL reduce production expr -> IDENT 
-- On INF reduce production expr -> IDENT 
-- On FOIS reduce production expr -> IDENT 
-- On ENDLINE reduce production expr -> IDENT 
-- On EGAL reduce production expr -> IDENT 
-- On DIVISE reduce production expr -> IDENT 
-- On DBLEGAL reduce production expr -> IDENT 
-- On COMMA reduce production expr -> IDENT 
-- On AND reduce production expr -> IDENT 

State 45:
expr -> IDENT LEFTPAR . loption(separated_nonempty_list(COMMA,expr)) RIGHTPAR [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
-- On VEC shift to state 32
-- On Tint shift to state 35
-- On TRUE shift to state 36
-- On PRINT shift to state 37
-- On MOINS shift to state 42
-- On LEFTPAR shift to state 43
-- On LEFTG shift to state 30
-- On IDENT shift to state 44
-- On FOIS shift to state 46
-- On FALSE shift to state 47
-- On EXCL shift to state 48
-- On ETMUT shift to state 49
-- On ET shift to state 50
-- On unaire shift to state 51
-- On separated_nonempty_list(COMMA,expr) shift to state 79
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 80
-- On expr shift to state 82
-- On bloc shift to state 77
-- On RIGHTPAR reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 46:
expr -> FOIS . expr [ SUPEGAL SUP RIGHTPAR RIGHTG RIGHTC POINT PLUS OR NOTEGAL MOINS MOD LEFTG LEFTC INFEGAL INF FOIS ENDLINE EGAL DIVISE DBLEGAL COMMA AND ]
unaire -> FOIS . [ VEC Tint TRUE PRINT MOINS LEFTPAR LEFTG IDENT FOIS FALSE EXCL ETMUT ET ]
-- On VEC shift to state 32
-- On Tint shift to state 35
-- On TRUE shift to state 36
-- On PRINT shift to state 37
-- On LEFTPAR shift to state 43
-- On LEFTG shift to state 30
-- On IDENT shift to state 44
-- On FALSE shift to state 47
-- On EXCL shift to state 48
-- On ETMUT shift to state 49
-- On ET shift to state 50
-- On unaire shift to state 51
-- On expr shift to state 78
-- On bloc shift to state 77
-- On VEC reduce production unaire -> FOIS 
-- On Tint reduce production unaire -> FOIS 
-- On TRUE reduce production unaire -> FOIS 
-- On PRINT reduce production unaire -> FOIS 
-- On MOINS reduce production unaire -> FOIS 
-- On LEFTPAR reduce production unaire -> FOIS 
-- On LEFTG reduce production unaire -> FOIS 
-- On IDENT reduce production unaire -> FOIS 
-- On FOIS reduce production unaire -> FOIS 
-- On FALSE reduce production unaire -> FOIS 
** Conflict on VEC Tint TRUE PRINT LEFTPAR LEFTG IDENT FALSE
